fix text alignment in work experience

--- a/styles/accordionItem.module.css
+++ b/styles/accordionItem.module.css
@@ -5,6 +5,10 @@
 	margin: 8px;
 }
 
+.content {
+	text-align: left;
+}
+
 .title {
 	display: flex;
 	justify-content: space-between;
